@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-03-06T16:07:48Z",
-  "count_outdated" : 705,
-  "uniques_outdated" : 339,
+  "timestamp" : "2024-03-07T00:24:01Z",
+  "count_outdated" : 707,
+  "uniques_outdated" : 340,
   "count" : 734,
   "uniques" : 354,
   "clones" : [
-    {
-      "timestamp": "2024-02-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-22T00:00:00Z",
       "count": 2,
