@@ -1,12 +1,7 @@
 {
-  "count": 28,
+  "count": 27,
   "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2024-02-21T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-02-22T00:00:00Z",
       "count": 2,
