@@ -1,3 +1,12 @@
+2024-03-07T00:24:01Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8180788357 # 180
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
+* notice: last 14d: unq all: 1 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 339 705 / 354 734
+* notice: next accum: outdated-unq outdated-all / unq all: 340 707 / 354 734
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-02-21] / []
+
 2024-03-06T16:07:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8175122795 # 179
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-06
